--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ transformers
 datasets
 torch
 spacy
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 regex
+sentence-transformers
 
 # Visualization
 matplotlib
@@ -28,3 +30,4 @@ pymongo
 tqdm
 joblib
 python-dotenv
+streamlit
